<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical">

    <Button
        android:id="@+id/font_size"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@android:color/darker_gray"
        android:text="@string/font_size" />

    <CheckBox
        android:id="@+id/volume_on_off"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        android:text="@string/volume_on_off" />

    <TextView
        android:id="@+id/game_brightness"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal"
        android:text="@string/game_brightness"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/seekBarForBrightness"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:max="100"
        android:progress="0" />

    <TextView
        android:id="@+id/brightnessLevel"
        android:layout_width="65sp"
        android:layout_height="20sp"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal"
        android:text="0" />


    <Button
        android:id="@+id/back"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:background="@android:color/darker_gray"
        android:text="@string/back" />

</LinearLayout>
